--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    app.members_photos: '%kernel.project_dir%/private/images/members'
+    app.images: '%kernel.project_dir%/private/images'
+    app.public_image: '%kernel.project_dir%/private/images/public'
+    app.members_photos: '%app.images%/members'
 
 services:
     # default configuration for services in *this* file
