--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    env(EXPOSE_VERSION): "false"
+    app.expose_version: '%env(bool:resolve:EXPOSE_VERSION)%'
+    
     app.images: '%kernel.project_dir%/private/images'
     app.public_image: '%kernel.project_dir%/private/images/public'
     app.members_photos: '%app.images%/members'
