--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -68,6 +68,7 @@ security:
         - { path: ^/global-settings, roles: [ROLE_ADMIN]}
             
         - { path: ^/inventory-categories, roles: [ROLE_SUPERVISOR]}
+        - { path: ^/inventory-items, roles: [ROLE_SUPERVISOR]}
 
         - { path: ^/members/-/from-itac, roles: [ROLE_ADMIN]}
         - { path: ^/members, roles: [ROLE_SUPERVISOR, ROLE_BADGER]}
