--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/mailer": "7.1.*",
         "symfony/mime": "7.1.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "7.1.*",
@@ -39,10 +40,12 @@
         "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.1.*",
         "symfony/serializer": "7.1.*",
+        "symfony/twig-bridge": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/validator": "7.1.*",
         "symfony/yaml": "7.1.*",
-        "twig/extra-bundle": "^3.10",
+        "twig/cssinliner-extra": "^3.11",
+        "twig/extra-bundle": "^3.11",
         "twig/twig": "^3.10",
         "zenstruck/foundry": "^1.38"
     },
