Mailer is now async

--- a/docker/messenger-worker.ini
+++ b/docker/messenger-worker.ini
@@ -3,7 +3,7 @@
 [supervisord]
 
 [program:messenger-consume]
-command=php /app/bin/console messenger:consume csv_import --time-limit=3600 --limit=20
+command=php /app/bin/console messenger:consume async_high async_medium async_low --time-limit=3600 --limit=20
 user=root
 numprocs=1
 startsecs=0
