--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&ch
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 # MESSENGER_TRANSPORT_DSN=doctrine://default
-MESSENGER_TRANSPORT_DSN_CSV_IMPORT=doctrine://default?queue_name=csv_import
+MESSENGER_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
 
 ###> nelmio/cors-bundle ###
