--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -5,8 +5,19 @@ framework:
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            csv_import:
-                dsn: '%env(MESSENGER_TRANSPORT_DSN_CSV_IMPORT)%'
+            async_high:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    # queue_name is specific to the doctrine transport
+                    queue_name: high
+            async_medium:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    queue_name: medium
+            async_low:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    queue_name: low
             test: 'doctrine://default?queue_name=test'
             failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
@@ -14,9 +25,10 @@ framework:
         routing:
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
-            App\Message\ItacMembersMessage: csv_import
-            App\Message\ItacSecondaryClubMembersMessage: csv_import
-            App\Message\CerberePresencesDateMessage: csv_import
+            'Symfony\Component\Mailer\Messenger\SendEmailMessage': async_high
+            App\Message\ItacMembersMessage: async_medium
+            App\Message\ItacSecondaryClubMembersMessage: async_low
+            App\Message\CerberePresencesDateMessage: async_low
 
 # when@test:
 #    framework:
