Add UUID support for generating URI

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
     "name": "benoit-vignal/narvik-back",
-    "version": "2.0.0",
+    "version": "3.0.0",
     "type": "project",
     "license": "GNU AGPLv3",
-    "description": "App to manage a french shooting club",
+    "description": "App to manage multiple french shooting clubs",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "php": ">=8.2.11",
         "ext-ctype": "*",
+        "ext-gmp": "*",
         "ext-iconv": "*",
         "api-platform/doctrine-orm": "^4.0",
         "api-platform/symfony": "^4.0",
@@ -23,6 +24,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/phpdoc-parser": "^1.29",
+        "ramsey/uuid-doctrine": "^2.1",
         "runtime/frankenphp-symfony": "dev-main",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
