--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,10 @@ jobs:
         run: curl -v --fail-with-body http://localhost
       -
         name: Check HTTPS reachability
-        if: false # Remove this line when the homepage will be configured, or change the path to check
         run: curl -vk --fail-with-body https://localhost
       -
         name: Create test database
-        if: false # Remove this line if Doctrine ORM is installed
-        run: docker compose exec -T php bin/console -e test doctrine:database:create
+        run: docker compose exec -T php composer reload-fixture
       -
         name: Run migrations
         if: false # Remove this line if Doctrine Migrations is installed
@@ -59,8 +57,7 @@ jobs:
         run: docker compose exec -T php bin/phpunit
       -
         name: Doctrine Schema Validator
-        if: false # Remove this line if Doctrine ORM is installed
-        run: docker compose exec -T php bin/console -e test doctrine:schema:validate
+        run: docker compose exec -T php bin/console doctrine:schema:validate
 #  lint:
 #    name: Docker Lint
 #    runs-on: ubuntu-latest
