--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/doctrine-orm": "^4.0",
+        "api-platform/ramsey-uuid": "^4.0",
         "api-platform/symfony": "^4.0",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.12",
