--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: curl -vk --fail-with-body https://localhost
       -
         name: Create test database
-        run: docker compose exec -T php composer reload-fixture
+        run: docker compose exec -T php bin/console -e test doctrine:database:create
       -
         name: Run migrations
         if: false # Remove this line if Doctrine Migrations is installed
@@ -57,7 +57,7 @@ jobs:
         run: docker compose exec -T php bin/phpunit
       -
         name: Doctrine Schema Validator
-        run: docker compose exec -T php bin/console doctrine:schema:validate
+        run: docker compose exec -T php bin/console -e test doctrine:schema:validate
 #  lint:
 #    name: Docker Lint
 #    runs-on: ubuntu-latest
