--- a/composer.json
+++ b/composer.json
@@ -56,10 +56,16 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "justinrainbow/json-schema": "^6.0",
         "phpstan/phpstan-doctrine": "^1.4",
+        "phpunit/phpunit": "^9.5",
         "rector/rector": "^1.1",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/css-selector": "7.1.*",
         "symfony/debug-bundle": "7.1.*",
+        "symfony/http-client": "7.1.*",
         "symfony/maker-bundle": "^1.51",
+        "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*"
     },
@@ -113,6 +119,14 @@
         "reload-fixture": [
             "@reload-schema",
             "php bin/console doctrine:fixtures:load -q"
+        ],
+        "reload-test": [
+            "php bin/console --env=test doctrine:schema:drop --force",
+            "php bin/console --env=test doctrine:schema:update --force",
+            "php bin/console --env=test doctrine:fixtures:load -q"
+        ],
+        "test": [
+            "bin/phpunit"
         ]
     },
     "conflict": {
