--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,8 +47,7 @@ security:
     role_hierarchy:
         ROLE_SUPER_ADMIN: [ ROLE_ADMIN ]
         ROLE_ADMIN: [ ROLE_SUPERVISOR ]
-        ROLE_SUPERVISOR: [ ROLE_MEMBER, ROLE_BADGER ]
-        ROLE_MEMBER: [ ROLE_USER ] # To enable when member will be able to log-in
+        ROLE_SUPERVISOR: [ ROLE_USER, ROLE_BADGER ]
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
