--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -28,8 +28,11 @@ doctrine:
 when@test:
     doctrine:
         dbal:
-            # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+            connections:
+                default:
+                    # "TEST_TOKEN" is typically set by ParaTest
+                    dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+                    use_savepoints: true
 
 when@prod:
     doctrine:
