--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,7 @@
             "@reload-fixture"
         ],
         "reload-schema": [
-            "php bin/console doctrine:schema:drop --force",
+            "php bin/console doctrine:schema:drop --force --full-database",
             "php bin/console doctrine:schema:update --force"
         ],
         "reload-fixture": [
