--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
         name: Check HTTPS reachability
         run: curl -vk --fail-with-body https://localhost
       -
+        name: Check Mercure reachability
+        run: curl -vkI --fail-with-body https://localhost/.well-known/mercure?topic=test
+      -
         name: Create test database
         run: docker compose exec -T php bin/console -e test doctrine:database:create
       -
