--- a/config/packages/zenstruck_foundry.yaml
+++ b/config/packages/zenstruck_foundry.yaml
@@ -8,4 +8,4 @@ when@test:
     zenstruck_foundry:
         auto_refresh_proxies: true
         global_state:
-            - App\Tests\Story\InitStory
+            - App\Tests\Story\_InitStory
