Handling selected member using custom header `Member` key for user having multiple profile linked to them

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -30,3 +30,6 @@ api_platform:
             JWT:
                 name: Authorization
                 type: header
+            Member:
+                name: Member
+                type: header
