--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,9 @@ services:
         decorates: 'api_platform.serializer.context_builder'
         arguments: [ '@App\Serializer\DefaultContextBuilder.inner' ]
         autoconfigure: false
+        
+    # We overload the generated api documentation
+    App\OpenApi\OpenApiFactory:
+        decorates: 'api_platform.openapi.factory'
+        arguments: [ '@App\OpenApi\OpenApiFactory.inner' ]
+        autoconfigure: false
