--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -18,8 +18,11 @@ framework:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                 options:
                     queue_name: low
-            test: 'doctrine://default?queue_name=test'
-            failed: 'doctrine://default?queue_name=failed'
+            failed:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    queue_name: failed
+            # test: 'doctrine://default?queue_name=test'
             # sync: 'sync://'
 
         routing:
@@ -29,11 +32,14 @@ framework:
             App\Message\ItacMembersMessage: async_medium
             App\Message\ItacSecondaryClubMembersMessage: async_low
             App\Message\CerberePresencesDateMessage: async_low
-
-# when@test:
-#    framework:
-#        messenger:
-#            transports:
-#                # replace with your transport name here (e.g., my_transport: 'in-memory://')
-#                # For more Messenger testing tools, see https://github.com/zenstruck/messenger-test
-#                async: 'in-memory://'
+    
+when@test:
+    framework:
+        messenger:
+            transports:
+                # replace with your transport name here (e.g., my_transport: 'in-memory://')
+                # For more Messenger testing tools, see https://github.com/zenstruck/messenger-test
+                async_high: 'test://'
+                async_medium: 'test://'
+                async_low: 'test://'
+                failed: 'test://'
