--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-gmp": "*",
+        "ext-zip": "*",
         "api-platform/doctrine-orm": "^4.0",
         "api-platform/ramsey-uuid": "^4.0",
         "api-platform/symfony": "^4.0",
@@ -52,7 +54,7 @@
         "twig/cssinliner-extra": "^3.11",
         "twig/extra-bundle": "^3.11",
         "twig/twig": "^3.15",
-        "zenstruck/foundry": "^2.2"
+        "zenstruck/foundry": "^2.2",
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
