--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
       -
         name: Start services
-        run: docker compose up --wait
+        run: docker compose up --no-build
       -
         name: Check HTTP reachability
         run: curl -v --fail-with-body http://localhost
