--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
         "twig/cssinliner-extra": "^3.11",
         "twig/extra-bundle": "^3.11",
         "twig/twig": "^3.15",
-        "zenstruck/foundry": "^2.2",
+        "zenstruck/foundry": "^2.2"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
