--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,17 @@ jobs:
         run: docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
       -
         name: Run PHPUnit
-        run: docker compose exec -T php bin/phpunit
+        run: | 
+          docker compose exec -T php XDEBUG_MODE=coverage bin/phpunit --coverage-clover coverage.xml .
+          docker compose cp php:coverage.xml .
+      -
+        name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with: 
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          
+        
       -
         name: Doctrine Schema Validator
         run: docker compose exec -T php bin/console -e test doctrine:schema:validate
