Add coverage export

--- a/composer.json
+++ b/composer.json
@@ -132,6 +132,9 @@
         "test": [
             "bin/phpunit"
         ],
+        "ci-test": [
+            "XDEBUG_MODE=coverage bin/phpunit --coverage-clover coverage.xml"
+        ],
         "test-with-coverage": [
             "XDEBUG_MODE=coverage bin/phpunit --coverage-html=tests/coverage/html"
         ]
