--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       -
         name: Run PHPUnit
         run: | 
-          docker compose exec -T php sh -c 'XDEBUG_MODE=coverage bin/phpunit --coverage-clover /app/coverage.xml .'
+          docker compose exec -T php sh -c 'composer ci-test'
           docker compose cp php:/app/coverage.xml ./coverage.xml
       -
         name: Upload coverage to Codecov
