--- a/codecov.yml
+++ b/codecov.yml
@@ -6,7 +6,7 @@ comment:
 component_management:
     default_rules: # default rules that will be inherited by all components
         statuses:
-            -   type: project # in this case every component that doens't have a status defined will have a project type one
+            -   type: project # in this case every component that doesn't have a status defined will have a project type one
                 target: auto
                 branches:
                     - "!main"
@@ -15,7 +15,7 @@ component_management:
             name: Entity
             paths:
                 - src/Entity/**
-                    
+
         -   component_id: controller
             name: Controller
             paths:
