Add CSV validator in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,9 @@ jobs:
         with: 
           files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
-          
-        
+      -
+        name: Custom CSV Validator
+        run: docker compose exec -T php bin/console -e test serializer:validate:csv
       -
         name: Doctrine Schema Validator
         run: docker compose exec -T php bin/console -e test doctrine:schema:validate
