--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -62,28 +62,11 @@ security:
 
         - {path: ^/self, roles: [ ROLE_USER, ROLE_BADGER ]}
 
-        - { path: ^/activities, roles: [ROLE_USER, ROLE_BADGER]}
+        - { path: ^/clubs, roles: [ROLE_USER, ROLE_BADGER]} # ClubDepend access control is defined directly in the entities
+
         - { path: ^/age-categories, roles: [ROLE_SUPER_ADMIN]}
-
-        - { path: ^/clubs, roles: [ROLE_USER, ROLE_BADGER]}
-
-        - { path: ^/external-presences, roles: [ROLE_USER, ROLE_BADGER]}
         - { path: ^/global-settings, roles: [ROLE_SUPER_ADMIN]}
-            
-        - { path: ^/inventory-categories, roles: [ROLE_USER]}
-        - { path: ^/inventory-items, roles: [ROLE_USER]}
-        - { path: ^/inventory-item-histories, roles: [ROLE_USER]}
-
-        - { path: ^/members/-/from-itac, roles: [ROLE_ADMIN]}
-        - { path: ^/members, roles: [ROLE_USER, ROLE_BADGER]}
-
-        - { path: ^/member-presences/-/from-cerbere, roles: [ROLE_ADMIN]}
-        - { path: ^/member-presences, roles: [ROLE_USER, ROLE_BADGER]}
         - { path: ^/metrics, roles: [ROLE_USER]}
-
-        - { path: ^/sales, roles: [ROLE_USER]}
-        - { path: ^/sale-payment-modes, roles: [ROLE_USER]}
-        # - { path: ^/sale-purchased-items, roles: [ROLE_USER]} # Not available in the API
         - { path: ^/seasons, roles: [ROLE_SUPER_ADMIN]}
             
         # - { route: 'presence_list', roles: ROLE_BADGER } # route will also include presence_list_* it's like path, it's regex 
