--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,7 +8,7 @@ parameters:
     app.expose_version: '%env(bool:resolve:EXPOSE_VERSION)%'
     
     app.files: '%kernel.project_dir%/private/files'
-    # app.public_images: '%kernel.project_dir%/private/images/public'
+    app.public_images: '%kernel.project_dir%/public/images'
     # app.members_photos: '%app.files%/members'
 
 when@test:
