Update email logo

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -55,8 +55,8 @@ security:
         - { route: ^/auth, roles: PUBLIC_ACCESS }
         - { route: 'auth_bdg', roles: PUBLIC_ACCESS }
         - { path: ^/public, roles: PUBLIC_ACCESS }
-        - { path: ^/members/-/initiate-reset-password, roles: PUBLIC_ACCESS }
-        - { path: ^/members/-/reset-password, roles: PUBLIC_ACCESS }
+        - { path: ^/users/-/initiate-reset-password, roles: PUBLIC_ACCESS }
+        - { path: ^/users/-/reset-password, roles: PUBLIC_ACCESS }
 
         - { path: ^/images, roles: [ROLE_USER, ROLE_BADGER]}
 
