Evryobdy can get the season list

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -69,7 +69,7 @@ security:
         - { path: ^/age-categories, roles: [ROLE_SUPER_ADMIN]}
         - { path: ^/global-settings, roles: [ROLE_SUPER_ADMIN]}
         - { path: ^/metrics, roles: [ROLE_USER]}
-        - { path: ^/seasons, roles: [ROLE_SUPER_ADMIN]}
+        - { path: ^/seasons, roles: [ROLE_USER]}
         - { path: ^/users, roles: [ROLE_SUPER_ADMIN]}
             
         # - { route: 'presence_list', roles: ROLE_BADGER } # route will also include presence_list_* it's like path, it's regex 
