--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,11 +40,11 @@ security:
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            switch_user: { parameter: X-Switch-User }
 
 
     role_hierarchy:
-        ROLE_SUPER_ADMIN: [ ROLE_ADMIN ]
+        ROLE_SUPER_ADMIN: [ ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
         ROLE_ADMIN: [ ROLE_USER ]
 
     # Easy way to control access for large sections of your site
