Add member link with other account

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,6 +4,7 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
          backupGlobals="false"
+         displayDetailsOnTestsThatTriggerWarnings="true"
          colors="true"
          bootstrap="tests/bootstrap.php"
 >
