--- a/composer.json
+++ b/composer.json
@@ -134,7 +134,7 @@
             "bin/phpunit"
         ],
         "ci-test": [
-            "XDEBUG_MODE=coverage bin/phpunit --coverage-clover coverage.xml"
+            "XDEBUG_MODE=coverage bin/phpunit --coverage-clover coverage.xml --log-junit junit.xml"
         ],
         "test-with-coverage": [
             "XDEBUG_MODE=coverage bin/phpunit --coverage-html=tests/coverage/html"
