--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,11 +65,17 @@ jobs:
         run: | 
           docker compose exec -T php sh -c 'composer ci-test'
           docker compose cp php:/app/coverage.xml ./coverage.xml
+          docker compose cp php:/app/junit.xml ./junit.xml
       -
         name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with: 
           files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
           token: ${{ secrets.CODECOV_TOKEN }}
       -
         name: Custom CSV Validator
