--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,8 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
-        "gesdinet/jwt-refresh-token-bundle": "^1.4",
         "league/csv": "^9.16",
-        "lexik/jwt-authentication-bundle": "^3.1",
+        "league/oauth2-server-bundle": "*",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpoffice/phpspreadsheet": "^4.0",
