Fix login in raw post wasn't work (POST was empty for sf, using json seems to work)

--- a/config/packages/league_oauth2_server.yaml
+++ b/config/packages/league_oauth2_server.yaml
@@ -16,7 +16,9 @@ league_oauth2_server:
             entity_manager: default
             table_prefix: oauth2_
 
-when@test:
-    league_oauth2_server:
-        persistence:
-            in_memory: null
+
+# when@test:
+# We keep the persistence, otherwise can't log
+#     league_oauth2_server:
+#         persistence:
+#             in_memory: null
