--- a/config/packages/league_oauth2_server.yaml
+++ b/config/packages/league_oauth2_server.yaml
@@ -9,7 +9,7 @@ league_oauth2_server:
     resource_server:
         public_key: '%env(resolve:OAUTH_PUBLIC_KEY)%'
     scopes:
-        available: [ 'all' ]
+        available: [ 'all', 'badger' ]
         default: [ 'all' ]
     persistence:
         doctrine:
