--- a/.env
+++ b/.env
@@ -50,6 +50,6 @@ LOCK_DSN=flock
 ###> league/oauth2-server-bundle ###
 OAUTH_PRIVATE_KEY=%kernel.project_dir%/config/jwt/private.pem
 OAUTH_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-OAUTH_PASSPHRASE=1ec240972e50121363ebbec436dc4084
-OAUTH_ENCRYPTION_KEY=2bc5eea2d941a8419ce23caed23ff602
+OAUTH_PASSPHRASE=
+OAUTH_ENCRYPTION_KEY=
 ###< league/oauth2-server-bundle ###
