--- a/.env
+++ b/.env
@@ -50,6 +50,6 @@ LOCK_DSN=flock
 ###> league/oauth2-server-bundle ###
 OAUTH_PRIVATE_KEY=%kernel.project_dir%/config/jwt/private.pem
 OAUTH_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-OAUTH_PASSPHRASE=
-OAUTH_ENCRYPTION_KEY=
+OAUTH_PASSPHRASE=changeme
+OAUTH_ENCRYPTION_KEY=change
 ###< league/oauth2-server-bundle ###
