Udate install commands

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -6,7 +6,9 @@ services:
       target: frankenphp_prod
     environment:
       APP_SECRET: ${APP_SECRET}
-      
+      OAUTH_PASSPHRASE: ${OAUTH_PASSPHRASE}
+      OAUTH_ENCRYPTION_KEY: ${OAUTH_ENCRYPTION_KEY}
+
     volumes:
       - app_jwt:/app/config/jwt
       - app_private_files:/app/private
