--- a/config/packages/rate_limiter.yaml
+++ b/config/packages/rate_limiter.yaml
@@ -1,7 +1,7 @@
 framework:
     rate_limiter:
         # define 2 rate limiters (one for username+IP, the other for IP)
-        member_ip_login:
+        user_ip_login:
             policy: token_bucket
             limit: 5
             rate: { interval: '5 minutes' }
