--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,9 @@ jobs:
       -
         name: Start services
         run: docker compose up --wait --no-build
-      #-
-      #  name: Create test database
-      #  run: docker compose exec -T php bin/console -e test doctrine:database:create
+      -
+        name: Create test database
+        run: docker compose exec -T php bin/console -e test doctrine:database:create
       -
         name: Run migrations
         run: docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
